--- a/templates/security_groups.j2
+++ b/templates/security_groups.j2
@@ -9,9 +9,13 @@ security_rules:
     to_port: 5902
     cidr_ip: 0.0.0.0/0
   - proto: tcp
+    from_port: 80
+    to_port: 80
+    cidr_ip: 192.168.0.0/16
+  - proto: tcp
     from_port: 443
     to_port: 443
-    cidr_ip: 0.0.0.0/0
+    cidr_ip: 192.168.0.0/16
   - proto: tcp
     from_port: 8443
     to_port: 8443
