Working on openshift install logic

--- a/templates/private_hosts.j2
+++ b/templates/private_hosts.j2
@@ -22,20 +22,20 @@
 {% endfor %}
 
 [master-nodes]
-{% for ip in ec2_private_nodes_sidea | list[:1] %}
+{% for ip in ec2_private_masters_sidea %}
 {{ ip.private_ip }}
 {% endfor %}
-{% for ip in ec2_private_nodes_sideb | list[:1] %}
+{% for ip in ec2_private_masters_sideb %}
 {{ ip.private_ip }}
 {% endfor %}
 
 [master_sidea]
-{% for ip in ec2_private_nodes_sidea | list[:1] %}
+{% for ip in ec2_private_masters_sidea %}
 {{ ip.private_ip }}
 {% endfor %}
 
 [master_sideb]
-{% for ip in ec2_private_nodes_sideb | list[:1] %}
+{% for ip in ec2_private_masters_sideb %}
 {{ ip.private_ip }}
 {% endfor %}
 
