Tweaked env script, fixed problem with hosts template, and added firewalld rich rules

--- a/templates/private_hosts.j2
+++ b/templates/private_hosts.j2
@@ -21,7 +21,7 @@
 {{ ip.private_ip }}
 {% endfor %}
 
-[master-nodes]
+[masters]
 {% for ip in ec2_private_masters_sidea %}
 {{ ip.private_ip }}
 {% endfor %}
