Fleshing out OpenShift Ansible install logic. Also added bastion private ip to host group in static hosts file.

--- a/templates/private_hosts.j2
+++ b/templates/private_hosts.j2
@@ -3,6 +3,11 @@
 {{ ip.private_ip }}
 {% endfor %}
 
+[bastions]
+{% for ip in ec2_public_instances %}
+{{ ip.private_ip }}
+{% endfor %}
+
 [nodes]
 {% for ip in ec2_private_nodes_sidea %}
 {{ ip.private_ip }}
