Several changes. Added etcd and lb instance types. Also working on the hosts template for the OpenShfit Ansible deployment.

--- a/templates/private_hosts.j2
+++ b/templates/private_hosts.j2
@@ -61,3 +61,39 @@
 {% for ip in ec2_private_bind_sideb %}
 {{ ip.private_ip }}
 {% endfor %}
+
+[etcd]
+{% for ip in ec2_private_etcd_sidea %}
+{{ ip.private_ip }}
+{% endfor %}
+{% for ip in ec2_private_etcd_sideb %}
+{{ ip.private_ip }}
+{% endfor %}
+
+[etcd_sidea]
+{% for ip in ec2_private_etcd_sidea %}
+{{ ip.private_ip }}
+{% endfor %}
+
+[etcd_sideb]
+{% for ip in ec2_private_etcd_sideb %}
+{{ ip.private_ip }}
+{% endfor %}
+
+[lb]
+{% for ip in ec2_private_lb_sidea %}
+{{ ip.private_ip }}
+{% endfor %}
+{% for ip in ec2_private_lb_sideb %}
+{{ ip.private_ip }}
+{% endfor %}
+
+[lb_sidea]
+{% for ip in ec2_private_lb_sidea %}
+{{ ip.private_ip }}
+{% endfor %}
+
+[lb_sideb]
+{% for ip in ec2_private_lb_sideb %}
+{{ ip.private_ip }}
+{% endfor %}
