fix for ssh bastion

--- a/templates/ssh_bastion.j2
+++ b/templates/ssh_bastion.j2
@@ -1,5 +1,5 @@
 Host 192.168.*
-  ProxyCommand ssh -W %h:%p bastion.{{ cluster_id }}.{{ r53_zone }}
+  ProxyCommand ssh -W %h:%p bastion.{{ cluster_id }}.{{ r53_zone }} -F ./ssh_bastion.cfg
   IdentityFile ~/crypto/{{ cluster_id }}.pem
 
 Host bastion.{{ cluster_id }}.{{ r53_zone }}
